== FeedTools 0.2.24
 * fixed autodiscovery bugs
 * updated autodiscovery to handle relative uris
 * added per feed configuration
 * fixed relative url resolution issues
 * corrected db schema files to match migration file
 * fixed bug in the save method
 * fixed some http bugs
 * updated dependancies
 * no longer causes problems with frozen rails
== FeedTools 0.2.23
 * autodiscovery implemented
 * now knows a title from a hole in the ground
 * now resolves relative urls when possible
 * changed default table name to "cached_feeds" to avoid name collisions
 * schema now uses "href" instead of "url"
 * feed cache is set to nil by default now
 * both summary and content elements are generated now
 * now supports proxies
 * now supports internationalized domain names if libidn is installed
 * fixed bug with feed merging referencing a method that was refactored
 * no longer dies if uuidtools gem is missing but the UUID class is defined
 * updated timestamp handling and generation
 * added support for entry sorting on any feed item field
 * added support for disabling entry sorting entirely
 * fixed issue with itunes categories
 * fixed itunes subtitle/summary
 * fixed entry assignment bug
 * fixed issued/published variable name mix-up
 * added support for the payload module
 * added support for xhtml:div elements
 * dc:date now preempts pubDate
 * added better support for the scriptingNews format
 * now correctly strips out wrapper div elements from text constructs
 * fixed issue with some atom links being incorrectly identified as images
 * reorganized some of the helper modules
 * made some portions of url normalization case insensitive
 * fixed issue with filename handling on Windows
== FeedTools 0.2.22
 * fixed another atom generation error
== FeedTools 0.2.21
 * fixed atom generation error
 * added summary element to generated atom xml
 * added warning message for improperly set up database tables
== FeedTools 0.2.20
 * fixed some atom namespace bugs